--- a/src/components/ui/forms/input/PasswordInput.astro
+++ b/src/components/ui/forms/input/PasswordInput.astro
@@ -4,7 +4,7 @@ const {
   forgot,
   id,
   errorId,
-  content
+  content,
 } = Astro.props;
 
 interface Props {
@@ -13,6 +13,7 @@ interface Props {
   id?: string;
   errorId?: string;
   content?: string;
+  name?: string;
 }
 ---
 
@@ -40,7 +41,7 @@ interface Props {
     <input
       type="password"
       id={id}
-      name="password"
+      name="contrasena"
       class="block w-full rounded-lg border border-neutral-200 bg-neutral-50 px-4 py-3 text-sm text-neutral-700 focus:border-neutral-200 focus:outline-hidden focus:ring-3 focus:ring-neutral-400 disabled:pointer-events-none disabled:opacity-50 dark:border-neutral-600 dark:bg-neutral-700/30 dark:text-neutral-300 dark:focus:ring-1"
       required
       aria-describedby={errorId}
