--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,11 +27,11 @@ const avatarSrcs: Array<string> = [
 ---
 
 <MainLayout>
-  <AnnouncementBanner
+  <!-- <AnnouncementBanner
     btnId="dismiss-button"
     btnTitle="Explora FERREMAS en GitHub"
     url="https://github.com/mearashadowfax/ScrewFast"
-  />
+  /> -->
 
   <HeroSection
     title=`Equipa tus Proyectos con <span
